--- a/content/blog/hack-cern/index.adoc
+++ b/content/blog/hack-cern/index.adoc
@@ -1,12 +1,12 @@
 :slug: hack-cern/
 :date: 2019-05-13
-:subtitle: A chat with Andrés Gómez.
+:subtitle: A chat with Andrés Gómez
 :category: interview
 :tags: security, machine learning, testing
 :image: cover.png
 :alt: Purple and pink plasma ball on Unsplash: https://unsplash.com/photos/jM6Y2nhsAtk
-:description: We spoke to Andrés Gómez, Ph.D. (c) at Goethe University. His research focuses on protecting a computer grid supporting physics experiments at the Large Hadron Collider (LHC) in Switzerland. Why did we choose this topic? It was not the topic, but the man. Andrés is a former Fluid Attacks member.
-:keywords: CERN, Hacking, Security, Interview, LHC, Machine Learning
+:description: For this post, we spoke with Andrés Gómez, a former Fluid Attacks' member, who is researching to protect a computer grid supporting experiments at the LHC.
+:keywords: CERN, Hacking, Security, Interview, LHC, Machine Learning, Pentesting, Ethical Hacking
 :author: Julian Arango
 :writer: jarango
 :name: Julian Arango
