--- a/content/pages/rules/source/155/index.adoc
+++ b/content/pages/rules/source/155/index.adoc
@@ -9,3 +9,12 @@
 == Requirement
 
 The application code must be free of malicious code.
+
+== References
+
+. [[r1]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V10.2 Malicious Code Search.(10.2.1)]
+Verify that the application source code and third party libraries do not
+contain unauthorized phone home or data collection capabilities.
+Where such functionality exists, obtain the user's permission for it to operate
+before collecting any data.
