--- a/content/pages/rules/social/261/index.adoc
+++ b/content/pages/rules/social/261/index.adoc
@@ -30,13 +30,19 @@ social network accounts either.
 The product exposes sensitive information to an actor that is not explicitly
 authorized to have access to that information.
 
-. [[r2]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
+. [[r2]] link:https://cwe.mitre.org/data/definitions/359.html[CWE-359: Exposure of Private Personal Information to an Unauthorized Actor].
+The product does not properly prevent a person's private, personal information
+from being accessed by actors who either are not explicitly authorized to
+access the information or do not have the implicit consent of the person about
+whom the information is collected.
+
+. [[r3]] link:https://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:02002L0058-20091219[Directive 2002/58/EC (amended by E-privacy Directive 2009/136/EC).
 Art. 4: Security of processing.(1a)]
 The measures referred to in paragraph 1 shall at least ensure that personal
 data can be accessed only by authorized personnel for legally authorized
 purposes.
 
-. [[r3]] link:https://gdpr-info.eu/art-5-gdpr/[GDPR. Art. 5: Principles relating to processing of personal data.(1)(f).]
+. [[r4]] link:https://gdpr-info.eu/art-5-gdpr/[GDPR. Art. 5: Principles relating to processing of personal data.(1)(f).]
 Personal data shall be processed in a manner that ensures appropriate security
 of the personal data,
 including protection against unauthorized or unlawful processing and against
